--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
 			 <code class="tab__pane active linux">$  sudo apt install ant openjdk-8-jdk</code>
 			  <code class="tab__pane active linux">$  sudo service openvswitch-switch start</code>
 			  <code class="tab__pane active linux">$  sudo update-alternatives --config java</code>
-			  Następnie wybrać z listy zainstalowaną jave 8
+			  Następnie należy wybrać Java 8 na potrzeby tego projektu.
         </div>
       </div>
       <div class="callout">
-        <p>Dokumentacja opisująca jak włączyć nasz projekt i zasymulować atak. Opisane są tam też podstawowe klasy i zmienne.</p>
+        <p>Dokumentacja naszego projektu oraz repozytorium na GitHHubie znajduje się pod poniższym linkiem.</p>
         <a href="doc.html" class="button--primary">Dokumentacja</a>
       </div>
     </div>
